--- a/package.json
+++ b/package.json
@@ -33,22 +33,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-=======
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MatheusHuk/gespo-react.git"
   },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MatheusHuk/gespo-react/issues"
-  },
-  "homepage": "https://github.com/MatheusHuk/gespo-react#readme"
+  "license": "ISC"
 }
