--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "node-fetch": "^2.6.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
