--- a/.github/workflows/master_gespotool.yml
+++ b/.github/workflows/master_gespotool.yml
@@ -23,7 +23,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm ci
-        npm run build --if-present
+        CI=false npm run build --if-present
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v1
