--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-fetch": "^2.6.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
