--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.0.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.0",
+    "react-fontawesome": "^1.7.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
