--- a/.github/workflows/master_gespo-app.yml
+++ b/.github/workflows/master_gespo-app.yml
@@ -23,6 +23,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
+        npm i react-scripts
         CI=false npm run build --if-present
         npm run test --if-present
 
