--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = https://gespo-rest.azurewebsites.net
-REACT_APP_DASHBOARD_URL = https://gespo-dash.herokuapp.com
+REACT_APP_API_URL = https://api-rest.gespocorp.com.br
+REACT_APP_DASHBOARD_URL = https://dashboards.gespocorp.com.br
