--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = https://api-rest.gespocorp.com.br
+REACT_APP_API_URL = http://localhost:8080
 REACT_APP_DASHBOARD_URL = https://dashboards.gespocorp.com.br
